--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="app">
-  <h1>{{ title }}</h1>
-</div>
+<section class="app">
+  <main class="router">
+    <router-outlet></router-outlet>
+  </main>
+</section>
