index: ng-material and ngx-masonry

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,11 @@
-<section class="app">
+<section class="app mat-indigo-pink">
+  <header>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <span>inventory</span>
+      </mat-toolbar-row>
+    </mat-toolbar>
+  </header>
   <main class="router">
     <router-outlet></router-outlet>
   </main>
