--- a/client/src/app/index/index.c.html
+++ b/client/src/app/index/index.c.html
@@ -1,5 +1,15 @@
 <section class="index">
-  <header>
-    index works
-  </header>
+  <main>
+    <ngx-masonry class="bricks">
+      <ngx-masonry-item class="brick w-2 primary">
+        1
+      </ngx-masonry-item>
+      <ngx-masonry-item class="brick v-2 primary">
+        2
+      </ngx-masonry-item>
+      <ngx-masonry-item class="brick primary">
+        3
+      </ngx-masonry-item>
+    </ngx-masonry>
+  </main>
 </section>
