index: the squares

--- a/client/src/app/index/index.c.html
+++ b/client/src/app/index/index.c.html
@@ -1,15 +1,84 @@
 <section class="index">
-  <main>
-    <ngx-masonry class="bricks">
-      <ngx-masonry-item class="brick w-2 primary">
-        1
-      </ngx-masonry-item>
-      <ngx-masonry-item class="brick v-2 primary">
-        2
-      </ngx-masonry-item>
-      <ngx-masonry-item class="brick primary">
-        3
-      </ngx-masonry-item>
-    </ngx-masonry>
+  <main class="index">
+    <section class="bricks">
+
+      <!-- inventory -->
+
+      <article class="brick w-2 primary">
+        <a>
+          <picture class="bg">
+            img
+          </picture>
+          <footer>
+            <header class="title">
+              <h2>Inventory</h2>
+            </header>
+            <div class="flexSpacer"></div>
+            <picture>
+              icon
+            </picture>
+          </footer>
+        </a>
+      </article>
+
+
+      <!-- log in -->
+      <article class="brick primary">
+        <a>
+          <picture class="bg">
+            img
+          </picture>
+          <footer>
+            <header class="title">
+              <h2>Log in</h2>
+            </header>
+          </footer>
+        </a>
+      </article>
+
+      <!-- Github -->
+      <article class="brick primary">
+        <a>
+          <picture class="bg">
+            img
+          </picture>
+          <footer>
+            <header class="title">
+              <h2>Github</h2>
+            </header>
+          </footer>
+        </a>
+      </article>
+
+      <!-- Editor -->
+      <article class="brick primary">
+        <a>
+          <picture class="bg">
+            img
+          </picture>
+          <footer>
+            <header class="title">
+              <h2>Editor</h2>
+            </header>
+          </footer>
+        </a>
+      </article>
+
+      <!-- About -->
+      <article class="brick primary">
+        <a>
+          <picture class="bg">
+            img
+          </picture>
+          <footer>
+            <header class="title">
+              <h2>About</h2>
+            </header>
+          </footer>
+        </a>
+      </article>
+
+
+    </section>
   </main>
 </section>
