--- a/client/src/app/index/index.c.scss
+++ b/client/src/app/index/index.c.scss
@@ -1,19 +1,114 @@
 
-$cell: 100;
+$cell: 140;
+$gap: 5;
+$border: 2;
 
 .brick {
   width: #{$cell}px;
   height: #{$cell}px;
   opacity: 0.9;
+  margin: #{$gap}px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  position: relative;
+  align-items: center;
+  border: #{$border}px solid transparent;
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
+
+  &:hover {
+    border-color: rgba(255, 255, 255, 0.8);
+  }
+
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    &:hover {
+      font-weight: 400;
+    }
+  }
+
+  picture.bg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  footer {
+    display: flex;
+    z-index: 30;
+    padding: 0 1em;
+    position: relative;
+    bottom: 2em;
+  }
+
+
 
   &.w-2 {
-    width: #{$cell * 2}px;
+    width: #{($cell + $gap + $border) * 2}px;
   }
 
   &.v-2 {
-    height: #{$cell * 2}px;
+    height: #{($cell + $gap + $border) * 2}px;
+  }
+
+  &.s-2 {
+    width: #{($cell + $gap + $border) * 2}px;
+    height: #{($cell + $gap + $border) * 2}px;
   }
 
 }
 
+.bricks {
+  margin: 1em auto;
+  padding: 3em;
+  width: 30em;
 
+}
+
+main.index {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 800px
+}
+
+
+@media (min-width: 992px) {
+
+  $cell: 200;
+  $gap: 10;
+
+  .bricks {
+    margin-top: 0vh;
+    width: 50em;
+  }
+
+
+  .brick {
+    width: #{$cell}px;
+    height: #{$cell}px;
+    margin: #{$gap}px;
+    border: #{$border}px solid transparent;
+
+    &.w-2 {
+      width: #{($cell + $gap + $border) * 2}px;
+    }
+  
+    &.v-2 {
+      height: #{($cell + $gap + $border) * 2}px;
+    }
+  
+    &.s-2 {
+      width: #{($cell + $gap + $border) * 2}px;
+      height: #{($cell + $gap + $border) * 2}px;
+    }
+  
+  }
+
+
+
+}
