--- a/client/src/assets/scss/themes/index.scss
+++ b/client/src/assets/scss/themes/index.scss
@@ -20,7 +20,17 @@ $foreground: white;
   @include angular-material-theme($index-theme);
   .primary {
     background-color: $localPrimary;
+    color: $foreground;
+
+    a {
+      color: $foreground;
+      &:hover {
+        color: $foreground
+      }
+    }
+
   }
+
   .primary-text {
     color: $localPrimary;
   }
@@ -33,6 +43,16 @@ $foreground: white;
   .warn {
     color: $localWarn;
   }
+
+  a {
+    color: $localPrimary;
+    font-weight: 400;
+    &:hover {
+      font-weight: 700;
+      color: $localPrimary
+    }
+  }
+
 }
 
 body {
