--- a/client/src/app/index/index.c.html
+++ b/client/src/app/index/index.c.html
@@ -7,7 +7,7 @@
       <article class="brick w-2 primary">
         <a>
           <picture class="bg">
-            img
+            <mat-icon>menu</mat-icon>
           </picture>
           <footer>
             <header class="title">
@@ -15,7 +15,7 @@
             </header>
             <div class="flexSpacer"></div>
             <picture>
-              icon
+                <mat-icon>menu</mat-icon>
             </picture>
           </footer>
         </a>
@@ -25,8 +25,8 @@
       <!-- log in -->
       <article class="brick primary">
         <a>
-          <picture class="bg">
-            img
+          <picture class="bg icon">
+            <img src="../../assets/images/login.png" alt="login">
           </picture>
           <footer>
             <header class="title">
@@ -40,7 +40,7 @@
       <article class="brick primary">
         <a>
           <picture class="bg">
-            img
+            <mat-icon>menu</mat-icon>
           </picture>
           <footer>
             <header class="title">
@@ -54,7 +54,7 @@
       <article class="brick primary">
         <a>
           <picture class="bg">
-            img
+            <mat-icon>menu</mat-icon>
           </picture>
           <footer>
             <header class="title">
@@ -68,7 +68,7 @@
       <article class="brick primary">
         <a>
           <picture class="bg">
-            img
+            <mat-icon>menu</mat-icon>
           </picture>
           <footer>
             <header class="title">
