--- a/client/src/app/index/index.c.scss
+++ b/client/src/app/index/index.c.scss
@@ -32,16 +32,26 @@ $border: 2;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 10;
+    &.icon {
+      > img, > span {
+        width: 5em;
+      }
+    }
   }
 
   footer {
     display: flex;
     z-index: 30;
     padding: 0 1em;
-    position: relative;
-    bottom: 2em;
+    position: absolute;
+    bottom: 0.5em;
+    width: 93%;
+    height: 2em;
+    align-items: center;
   }
 
 
@@ -65,7 +75,10 @@ $border: 2;
   margin: 1em auto;
   padding: 3em;
   width: 30em;
-
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 main.index {
@@ -73,8 +86,18 @@ main.index {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  height: 800px
+  height: calc(100vh - 64px);
 }
+
+// div.frame {
+//   width: 5em;
+//   height: 5em;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 100%;
+//   height: 100%;
+// }
 
 
 @media (min-width: 992px) {
