actor-select: outlet

--- a/client/src/app/index/index.c.html
+++ b/client/src/app/index/index.c.html
@@ -24,7 +24,7 @@
 
       <!-- log in -->
       <article class="brick primary">
-        <a>
+        <a routerLink="/actors/select">
           <picture class="bg icon">
             <img src="../../assets/images/login.png" alt="login">
           </picture>
