--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -35,10 +35,11 @@
             </picture>
             <h1>Log in</h1>
           </header>
-          <a mat-list-item class="active"><mat-icon>menu</mat-icon><h2>Inventory</h2></a>
-          <a mat-list-item><mat-icon>menu</mat-icon><h2>Editor</h2></a>
-          <a mat-list-item><mat-icon>menu</mat-icon><h2>Github</h2></a>
-          <a mat-list-item><mat-icon>menu</mat-icon><h2>About</h2></a>
+          <a mat-list-item routerLink="/index" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Index</h2></a>
+          <a mat-list-item routerLink="/inventory" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Inventory</h2></a>
+          <a mat-list-item routerLink="/editor" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Editor</h2></a>
+          <a mat-list-item routerLink="/github" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Github</h2></a>
+          <a mat-list-item routerLink="/about" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>About</h2></a>
         </mat-nav-list>
       </mat-sidenav>
 
