--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -38,3 +38,129 @@ a {
 .rounded {
   border-radius: 50%;
 }
+
+
+// bricks -->
+
+$cell: 140;
+$gap: 5;
+$border: 2;
+
+$length2x: #{($cell + $gap + $border) * 2}px;
+
+.brick {
+  width: #{$cell}px;
+  height: #{$cell}px;
+  opacity: 0.9;
+  margin: #{$gap}px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  position: relative;
+  align-items: center;
+  border: #{$border}px solid transparent;
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
+
+  &:hover {
+    border-color: rgba(255, 255, 255, 0.8);
+  }
+
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    &:hover {
+      font-weight: 400;
+    }
+  }
+
+  picture.bg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    &.icon {
+      > img, > span {
+        width: 5em;
+      }
+    }
+  }
+
+  footer {
+    display: flex;
+    z-index: 30;
+    padding: 0 1em;
+    position: absolute;
+    bottom: 0.5em;
+    width: 93%;
+    height: 2em;
+    align-items: center;
+  }
+
+
+
+  &.w-2 {
+    width: $length2x;
+  }
+
+  &.v-2 {
+    height: $length2x;
+  }
+
+  &.s-2 {
+    width: $length2x;
+    height: $length2x;
+  }
+
+}
+
+.bricks {
+  margin: 1em auto;
+  padding: 3em;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+// <-- bricks
+
+
+@media (min-width: 992px) {
+
+  // bricks -->
+
+  $cell: 200;
+  $gap: 10;
+  $border: 1;
+
+  $length2x: #{($cell + $gap + $border) * 2}px;
+
+  .brick {
+    width: #{$cell}px;
+    height: #{$cell}px;
+    margin: #{$gap}px;
+    border: #{$border}px solid transparent;
+
+    &.w-2 {
+      width: $length2x;
+    }
+  
+    &.v-2 {
+      height: $length2x;
+    }
+  
+    &.s-2 {
+      width: $length2x;
+      height: $length2x;
+    }
+  
+  }
+
+  // <-- bricks
+
+
+
+}
