(WIP) actor select module Angular Material只要加入Dialog就会导致第一屏卡loading(不知道为什么app chunk不加载了)。 Google无果，所以要么换回ng-cli，要么换框架，要么自己写modal dialog

--- a/client/src/app/actor/actor.c.html
+++ b/client/src/app/actor/actor.c.html
@@ -1,5 +1,5 @@
 <section class="actor">
-  <header>
-    actor works
-  </header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
 </section>
