--- a/client/src/app/actor/select/dialog-select/dialog-select.c.html
+++ b/client/src/app/actor/select/dialog-select/dialog-select.c.html
@@ -1,5 +1,9 @@
 <section class="select">
   <header>
-      dialog-select
+    dialog-select ok?
   </header>
+  <footer mat-dialog-actions>
+    <button mat-button (click)="cancel()">No</button>
+    <button mat-button >Yes</button>
+  </footer>
 </section>
