* fix issue external libs in lazy-loaded module booms app chunks which is caused by magnificent webpack 4 split-chunk optimization

--- a/client/src/assets/scss/themes/index.scss
+++ b/client/src/assets/scss/themes/index.scss
@@ -16,6 +16,10 @@ $localAccent: map-get(map-get($index-theme, accent), 'A200');
 $localWarn: map-get(map-get($index-theme, warn), 500); 
 $foreground: white;
 
+
+@include angular-material-theme($index-theme);
+
+
 .mat-indigo-pink {
   @include angular-material-theme($index-theme);
   .primary {
