--- a/client/src/app/actor/select/select.c.html
+++ b/client/src/app/actor/select/select.c.html
@@ -5,8 +5,8 @@
   <main>
     <section class="bricks">
 
-      <article *ngFor="let actor of dummyPlayers" class="brick primary">
-        <a (click)="openSelectDialog(actor.dbname)">
+      <article *ngFor="let actor of dummyPlayers; let i = index" class="brick primary">
+        <a (click)="openSelectDialog(i)">
           <picture class="bg icon">
             <img src="../../../assets/images/login.png" alt="default">
           </picture>
