client: skyui component

--- a/client/src/app/actor/select/select.c.html
+++ b/client/src/app/actor/select/select.c.html
@@ -1,5 +1,5 @@
 <section class="select">
-  <header>
+  <header class="select">
     <h1>Choose an actor -  selected {{ selectState.dbname }}</h1>
   </header>
   <main>
