--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section class="app mat-indigo-pink">
+<section class="app mat-bluegrey-grey">
   <header [class.mainMobile]="mobileQuery.matches">
     <mat-toolbar color="primary" class="topToolbar">
       <mat-toolbar-row>
@@ -36,7 +36,7 @@
             <h1>Log in</h1>
           </header>
           <a mat-list-item routerLink="/index" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Index</h2></a>
-          <a mat-list-item routerLink="/inventory" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Inventory</h2></a>
+          <a mat-list-item routerLink="/inventory/skyui" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Inventory</h2></a>
           <a mat-list-item routerLink="/editor" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Editor</h2></a>
           <a mat-list-item routerLink="/github" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>Github</h2></a>
           <a mat-list-item routerLink="/about" routerLinkActive="active"><mat-icon>menu</mat-icon><h2>About</h2></a>
