--- a/client/src/app/index/index.c.html
+++ b/client/src/app/index/index.c.html
@@ -5,7 +5,7 @@
       <!-- inventory -->
 
       <article class="brick w-2 primary">
-        <a>
+        <a routerLink="/inventory/skyui">
           <picture class="bg">
             <mat-icon>menu</mat-icon>
           </picture>
