--- a/client/src/assets/scss/themes/skyui.scss
+++ b/client/src/assets/scss/themes/skyui.scss
@@ -1,8 +1,8 @@
 /* This file should only be included once! */
 @import './core';
 
-$skyui-primary: mat-palette($mat-grey, 200);
-$skyui-accent:  mat-palette($mat-lightblue, A200, A100, A400);
+$skyui-primary: mat-palette($mat-blue-grey, 200);
+$skyui-accent:  mat-palette($mat-grey, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $skyui-warn:    mat-palette($mat-red);
@@ -16,7 +16,7 @@ $localAccent: map-get(map-get($skyui-theme, accent), 'A200');
 $localWarn: map-get(map-get($skyui-theme, warn), 500); 
 $foreground: black;
 
-.mat-grey-lightblue {
+.mat-bluegrey-grey {
   @include angular-material-theme($skyui-theme);
   .primary {
     background-color: $localPrimary;
@@ -33,8 +33,4 @@ $foreground: black;
   .warn {
     color: $localWarn;
   }
-}
-
-body {
-  background-color: #212121;
 }
