skyui: item detail

--- a/client/src/app/inventory/skyui/skyui.c.html
+++ b/client/src/app/inventory/skyui/skyui.c.html
@@ -102,4 +102,29 @@
     
 
   </aside>
+  <main class="list">
+    <header>
+      <picture>
+        <i class="icomoon skyui-item icon-armor-heavy-body"></i>
+      </picture>
+      <article class="detail">
+        <h2>Heavy Armor</h2>
+        <h1>dwemeri armor</h1>
+        <ul>
+          <li>
+            <span class="title">Armor</span>
+            <span class="value">48</span>
+          </li>
+          <li>
+            <span class="title">Weight</span>
+            <span class="value">45</span>
+          </li>
+          <li>
+            <span class="title">Value</span>
+            <span class="value">400</span>
+          </li>
+        </ul>
+      </article>
+    </header>
+  </main>
 </section>
