--- a/client/src/app/inventory/skyui/skyui.c.scss
+++ b/client/src/app/inventory/skyui/skyui.c.scss
@@ -37,6 +37,11 @@ aside.list {
     width: 100%;
   }
 
+  td.icon {
+    width: 2em;
+    text-align: center;
+  }
+
   tr {
     height: 2em;
     font-size: 16px;
