--- a/client/src/app/inventory/skyui/skyui.c.html
+++ b/client/src/app/inventory/skyui/skyui.c.html
@@ -67,21 +67,18 @@
     
       <!-- Header and Row Declarations -->
       <tr cdk-header-row *cdkHeaderRowDef="columnsToDisplay"></tr>
-      <tr cdk-row *cdkRowDef="let row; columns: columnsToDisplay"></tr>
+      <tr cdk-row *cdkRowDef="let row; columns: columnsToDisplay" (mouseenter)="showDetail($event)"></tr>
     </table>
 
-
-    
-
   </aside>
-  <main class="list">
+  <main class="list" *ngIf="currentDetail.name">
     <header>
       <picture>
-        <i class="icomoon skyui-item icon-armor-heavy-body"></i>
+        <i class="icomoon skyui-item icon-armor-heavy-body" [ngClass]="currentDetail.icon"></i>
       </picture>
       <article class="detail">
         <h2>Heavy Armor</h2>
-        <h1>dwemeri armor</h1>
+        <h1 [innerHTML]="currentDetail.name">Loading item name...</h1>
         <ul>
           <li>
             <span class="title">Armor</span>
