--- a/client/src/app/inventory/skyui/skyui.c.scss
+++ b/client/src/app/inventory/skyui/skyui.c.scss
@@ -129,6 +129,7 @@ div.filter {
   height: 2em;
   border-top: $borderStyle;
   border-bottom: $borderStyle;
+  border-left: $borderStyle;
   picture {
     display: flex;
     font-size: 20px;
