scaffold: changed to @angular/cli 6

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,8 @@
+// // skyui icons
+// @import './assets/scss/skyui-icons/icomoon-skyui-category';
+// @import './assets/scss/skyui-icons/icomoon-skyui-item';
+// @import './assets/scss/skyui-icons/icomoon-skyui-misc';
+
 // mat themes
 @import './assets/scss/themes/index';
 @import './assets/scss/themes/skyui';
