fixed issue login avatar missing

--- a/client/src/app/actor/select/dialog-select/dialog-select.c.html
+++ b/client/src/app/actor/select/dialog-select/dialog-select.c.html
@@ -23,7 +23,7 @@
     <div class="row1">
       <header class="profile">
         <picture>
-          <img src="../../../../assets/images/login.png" alt="avatar">
+          <img src="statics/images/login.png" alt="avatar">
         </picture>
         <h2>      {{ data.name }}    </h2>
       </header>
