--- a/client/src/app/actor/select/select.c.html
+++ b/client/src/app/actor/select/select.c.html
@@ -8,7 +8,7 @@
       <article *ngFor="let actor of dummyPlayers; let i = index" class="brick primary">
         <a (click)="openSelectDialog(i)">
           <picture class="bg icon">
-            <img src="../../../assets/images/login.png" alt="default">
+            <img src="statics/images/login.png" alt="default">
           </picture>
           <footer>
             <header class="title">
