--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -31,7 +31,7 @@
         <mat-nav-list class="sideNavList">
           <header class="cover">
             <picture>
-              <img src="../assets/images/login.png" alt="login" class="rounded fluid">
+              <img src="statics/images/login.png" alt="login" class="rounded fluid">
             </picture>
             <h1>Log in</h1>
           </header>
