--- a/client/src/app/index/index.c.html
+++ b/client/src/app/index/index.c.html
@@ -26,7 +26,7 @@
       <article class="brick primary">
         <a routerLink="/actors/select">
           <picture class="bg icon">
-            <img src="../../assets/images/login.png" alt="login">
+            <img src="statics/images/login.png" alt="login">
           </picture>
           <footer>
             <header class="title">
