(WIP) equip presentation we can now click to toggle equip state (visual only)

--- a/client/src/app/inventory/skyui/skyui.c.html
+++ b/client/src/app/inventory/skyui/skyui.c.html
@@ -27,7 +27,9 @@
      <ng-container cdkColumnDef="equip">
       <td class="equip" cdk-header-cell *cdkHeaderCellDef></td>
       <td class="equip" cdk-cell *cdkCellDef="let row">
-        <i class="icomoon skyui-misc icon-equiped" [ngClass]="row.equip"></i>
+        <div *ngIf="row.isEquiped" class="equip">
+          <i class="icomoon skyui-misc icon-equiped" [ngClass]="row.equip"></i>
+        </div>
       </td>
     </ng-container>
 
